<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#393832"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <Button
        android:id="@+id/btnPolitics"
        style="@style/RedStrokeBtn"
        android:textColor="@color/tagRed"
        android:layout_marginLeft="@dimen/stdPadding"
        android:layout_marginRight="@dimen/stdPadding"
        android:layout_marginTop="@dimen/midPadding"
        android:textSize="15dp"
        android:text="@string/politics" />

    <Button
        android:id="@+id/btnPorn"
        style="@style/RedStrokeBtn"
        android:textColor="@color/tagRed"
        android:layout_marginLeft="@dimen/stdPadding"
        android:layout_marginRight="@dimen/stdPadding"
        android:layout_marginTop="@dimen/midPadding"
        android:textSize="15dp"
        android:text="@string/porn" />

    <Button
        android:id="@+id/btnAttack"
        style="@style/RedStrokeBtn"
        android:textColor="@color/tagRed"
        android:layout_marginLeft="@dimen/stdPadding"
        android:layout_marginRight="@dimen/stdPadding"
        android:layout_marginTop="@dimen/midPadding"
        android:textSize="15dp"
        android:text="@string/attack" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/RedStrokeBtn"
        android:layout_marginLeft="@dimen/stdPadding"
        android:layout_marginRight="@dimen/stdPadding"
        android:layout_marginTop="@dimen/midPadding"
        android:layout_marginBottom="@dimen/midPadding"
        android:textSize="15dp"
        android:text="@string/cancel" />


</LinearLayout>